# setproctitle

./: Makefile.in  README.md  config.h.in  configure  configure.ac
man/: Makefile.am  Makefile.in  setproctitle.1
src/: Makefile.am  Makefile.in  setproctitle.c
